# ROS2-based-automated-attendance-system

./: README.md
automated_attendance_system_updated/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
automated_attendance_system_updated/launch/: launch_file.py
automated_attendance_system_updated/src/automated_attendance_system/: node1.py  node2.py  node3.py  print_and_launch.py
